# qrsim

./: .gitignore  LICENSE  README.md  README.md~  init.m  initPath.m  main.m  mexify.m
classes/core/: Steppable.m
classes/graphics/: QuadrotorGraphics.m
classes/sensors/: Sensor.m
configs/: default_config.m  pelican_config.m
configs/orbits/: ngs15992_16to17.sp3
controllers/: AnglesHeightPID.m  VelocityHeightPID.m  VelocityPID.m  WaypointPID.m  readme.txt
doc/: axes.eps  catmousestart.eps  catmousestart.xcf  catmousestop.eps  catmousestop.xcf  exercises.tex  manual.bib  manual.tex  master.tex  multigaussplume.xcf  plumedistr.xcf  qrsim.kilepr  qrsimcite.bib  scenarios.tex  searchrescue.xcf  singlegausspuffplume.xcf  tutorial.tex
example/: main.m  main10.m  mainComplacs.m  mainMultisim.m  mainV.m  quadrotorPID.m  quadrotorVelPID.m  readme.txt
functions/: loadConfig.m  ned2ecef.m  utm2lla.m
qrsim/: QRSim.m  mexify.m
qrsim/+core/: QRSim.m
qrsim/+platforms/: pelicanODE.c  pelicanODE.m
qrsim/core/: QRSim.m  Steppable.m
qrsim/enviroment/: EnvironmentObject.m
qrsim/graphics/: AreaGraphics.m  PelicanGraphics.m  QuadrotorGraphics.m
qrsim/tasks/: KeepSpot.m  Task.m  TaskKeepSpot.m  TaskKeepSpot10.m
scenarios/: readme.txt
scenarios/catsmouse/: TaskCatsMouseNoiseless.m  TaskCatsMouseNoisy.m  TaskCatsMouseNoisyAndWindy.m  TaskCatsMouseWindy.m  main_catsmouse.m  noiseless_cat_config.m  noiseless_mouse_config.m  noisy_cat_config.m  noisy_mouse_config.m  noisy_windy_cat_config.m  noisy_windy_mouse_config.m
scenarios/copehill/: TaskCopehill.m  chd.csv  chd.tif  mainCopehill.m  noiseless_config.m
scenarios/holdingpattern/: TaskHoldingPattern.m  main_holdingpattern.m
scenarios/plume/: TaskNoGaussianDispersionNumRefLocations.m  TaskNoGaussianDispersionQRange.m  TaskPlumeMultiHeliMultiSourceGaussianDispersion.m  TaskPlumeMultiHeliMultiSourceGaussianPuffDispersion.m  TaskPlumeMultiSourceGaussianDispersion.m  TaskPlumeMultiSourceGaussianPuffDispersion.m  TaskPlumeSingleSourceGaussian.m  TaskPlumeSingleSourceGaussianDispersion.m  TaskPlumeSingleSourceGaussianPuffDispersion.m  main_plume.m  pelican_config_plume_noiseless.m  pelican_config_plume_noisy_windy.m
scenarios/searchrescue/: TaskSearchRescueMultipleNoiseless.m  TaskSearchRescueMultipleNoisyAndWindy.m  TaskSearchRescueSingleNoiseless.m  TaskSearchRescueSingleNoisy.m  main_searchrescue.m  pelican_config_camera.m  pelican_with_camera_noiseless_config.m  pelican_with_camera_noiseless_config.m~  pelican_with_camera_noisy_config.m  pelican_with_camera_noisy_windy_config.m
sim/: QRSim.m  mexify.m
sim/core/: State.m  Steppable.m
sim/enviroment/: EnvironmentObject.m
sim/graphics/: AreaGraphics.m  AreaWithObstaclesGraphics.m  CameraGraphics.m  GaussianPlumeAreaGraphics.m  PelicanGraphics.m  PelicanGraphicsBlack.m  PlumeAreaGraphics.m  QuadrotorGraphics.m  SearchAreaGraphics.m  SearchAreaWithHousesGraphics.m  ucl-rvc-zoom.csv
sim/tasks/: BaseTask.m  Task.m  TaskComplacs.m  TaskGotoWP.m  TaskKeepSpot.m  TaskKeepSpot10.m  TaskKeepSpotWithReward.m  TaskKeepVel.m
src/core/: Steppable.m  SteppablePRNG.m
src/graphics/: AreaGraphics.m  QuadrotorGraphics.m
tcp-linux/: .gitignore  CMakeLists.txt  cmake_uninstall.cmake
tcp-linux/cmake/Modules/: FindJava.cmake  FindProtocolBuffers.cmake  UseJava.cmake
tcp-linux/exampleprj/: CMakeLists.txt
tcp-linux/exampleprj/src/: exampleclient.cpp
tcp-linux/java/qrsimsrvcli/: QRSimTCPServer.java
tcp-linux/matlab/: QRSimTCPServer.m  QRSimTCPServer.m.in
tcp-linux/pi/: CMakeLists.txt
tcp-linux/pi/src/: Makefile  PIController.cpp  PIController.h  pi_qrsim.cpp  pi_qrsim.xml
tcp-linux/pigen/: CMakeLists.txt  README  Task0.m  Task1.m  pi_qrsim_Catmouse.xml  pi_qrsim_Circular.xml  picatmouse.tgz
tcp-linux/pigen/src/: .ModelCatmouse.cpp.swp  ModelCatmouse.cpp  ModelCircular.cpp  PIController.cpp  PIController.h  global.h  pi_qrsim.cpp
tcp-linux/piprj/: CMakeLists.txt  pi_qrsim.xml
tcp-linux/piprj/cmake/Modules/: FindGSL.cmake  FindProtocolBuffers.cmake
tcp-linux/piprj/src/: PIController.cpp  global.h  pi_qrsim.cpp
tcp-linux/proto/: qrs_srv_cli_msg.proto
tcp-linux/src/: QRSimTCPClient.cpp  QRSimTCPClient.h  testclient.cpp
tests/: TestGPSTask.m  TestSensorsTask.m  allan.m  computeGMparameters.m  computeOUparameters.m  isWithinTolerance.m  pelican_test_config.m  pelican_test_gps_config.m  pelican_test_sensors_config.m  readme.txt  testAssertions.m  testCollision.m  testCoordinateConversions.m  testDynamics.m  testGPSNoiseModels.m  testKL.m  testKNNRadiousSearch.m  testLimits.m  testPIDs.m  testPlume.m  testPolyVal.m  testSR.m  testSeed.m  testSensorsNoiseModels.m  testSetReset.m  testWind.m  testWind.m~
tests/assert/: AHARSPelicanForTesting.m  TaskAerodynamicTurbulenceOff.m  TaskBadPlatformCameraPersonsInClass.m  TaskBadPlatformCameraTerrainClassPercentages.m  TaskDisplay3DOff.m  TaskDtNotAMultiple.m  TaskGPSSpaceSegmentOff.m  TaskNoAerodynamicTurbulence.m  TaskNoAerodynamicTurbulenceDt.m  TaskNoAerodynamicTurbulenceType.m  TaskNoAerodynamicTurbulenceW6.m  TaskNoAreaGraphics.m  TaskNoAreaGraphicsType.m  TaskNoAreaLimits.m  TaskNoAreaOriginUTMCoords.m  TaskNoAreaType.m  TaskNoDT.m  TaskNoDT.m~  TaskNoDisplay3D.m  TaskNoDisplay3DHeight.m  TaskNoDisplay3DWidth.m  TaskNoGPSSpaceSegmentBeta.m  TaskNoGPSSpaceSegmentBeta1.m  TaskNoGPSSpaceSegmentBeta2.m  TaskNoGPSSpaceSegmentDt.m  TaskNoGPSSpaceSegmentSigmaA.m  TaskNoGPSSpaceSegmentSigmaB.m  TaskNoGPSSpaceSegmentType.m  TaskNoGPSSpacesegmentOrbitFileA.m  TaskNoGPSSpacesegmentOrbitFileB.m  TaskNoGPSSpacesegmenttSVSA.m  TaskNoGPSSpacesegmenttSVSB.m  TaskNoGPSSpacesegmenttStartA.m  TaskNoGPSSpacesegmenttStartB.m  TaskNoGaussianDispersionA.m  TaskNoGaussianDispersionB.m  TaskNoGaussianDispersionNumSourcesRange.m  TaskNoGaussianPuffDispersionA.m  TaskNoGaussianPuffDispersionB.m  TaskNoGaussianPuffDispersionMu.m  (+136 more)
tests/camera/: displayPourTerrainMap.m  displayScoresDistrib.m  zintersect.m
tests/collision/: TaskTwoUAVS.m  pelican_config_no_errors.m
tests/dynamics/: TaskDynamicsCompareRotations.m  pelican_config_dynamics.m  (+7 more)
(+232 files in other folders)
